--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ cache:
 
 deploy:
   provider: script
-  script: ./gradle publish
+  script: ./gradlew publish
   skip_cleanup: true
   on:
     tags: true
