--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 kotlin.code.style=official
 org.gradle.parallel=true
 kotlin.parallel.tasks.in.project=true
-org.gradle.console=verbose
+org.gradle.console=plain
 org.gradle.logging.level=debug
 org.gradle.warning.mode=all
