downgraded build tools to 29.0.3

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ jobs:
       language: android
       android:
         components:
-          - build-tools-30.0.0-rc1
+          - build-tools-29.0.3
           - android-29
 
 env:
